sample/errors/sample_09.nev

func A() -> int
{
    0
}

func A() -> int
{
    0
}

func main() -> int
{
    0
}